--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Adding config.py file
+config.py
+
+#adding additional files
+API_practice.ipynb
+random_numbers.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,4 +134,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-/config.py
+
