--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ config.py
 #adding additional files
 API_practice.ipynb
 random_numbers.ipynb
+linear_regression_example.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
